--- a/indexed.css
+++ b/indexed.css
@@ -1,16 +1,64 @@
 header{
-    background-color: rgb(255, 127, 202);
-    color: rgb(38, 21, 227);
+    background-color: rgb(249, 244, 247);
+    color:rgb(113, 8, 8);
+    text-align: right;
+    font-size: 18px;
+    font-weight: 500;
+}
+header i{
+    padding-right:17px;
 }
 
 .heading{
     background-color: black;
     color: white;
 }
+p{
+    font-size: 17px;
+}
 span{
-    color: yellow;
+    color: rgb(255, 183, 0);
 }
 #line{
     color: blueviolet;
     background-color: rgb(203, 225, 123);
+}
+
+.list,li{
+    padding-left: 10px;
+    font-size: 20px;
+    margin: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+ 
+}
+
+table{
+    margin-right:80px;
+    border: 1px solid black;
+}
+
+table,th,td{
+    padding:20px;
+    border: 1px solid black;
+    border-collapse: collapse;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+th{
+    background-color: bisque;
+    font-size: 20px;
+}
+
+
+
+.demo,a{
+   font-size: 25px;
+   color: black;
+   padding: 5px 15px 10px 1px;
+   text-decoration: none;
+   font-family: 'Roboto', sans-serif;
+   font-weight: 600;
+}
+h3{
+    background-color: bisque; 
 }
